add the ability to configure

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <div class="container">
-        <h2>📂 All Requests</h2>
+        <h2 id="tit">📂 All Requests</h2>
 
         <!-- TODAY SECTION -->
         <h3 class="section-title">📅 Today</h3>
